fix: list item text-align

--- a/src/app/components/toDoList.scss
+++ b/src/app/components/toDoList.scss
@@ -18,7 +18,7 @@
 
         p {
             color: hsla(0, 0%, 0%, 0.54);
-            text-align: left;
+            text-align: center;
             font-size: 16px;
             font-weight: 400;
 
@@ -40,12 +40,14 @@
                 justify-content: space-between;
                 align-items: center;
 
+
                 &:hover {
                     background-color: #F7F9FD;
                 }
                 
                 p {
                     color: black;
+                    text-align: left;
                     &.checked {
                         text-decoration: line-through;
                         color: hsla(0, 0%, 0%, 0.54);
